Fix odd font sizes in landscape mode on iOS
https://stackoverflow.com/q/2710764
https://developer.mozilla.org/en-US/docs/Web/CSS/text-size-adjust

--- a/assets/main.css
+++ b/assets/main.css
@@ -20,6 +20,8 @@ body {
   text-rendering: optimizeLegibility;
   /* overflow-y: scroll; */
   overflow-x: hidden;
+  text-size-adjust: none;
+  -webkit-text-size-adjust: none;
 }
 
 /* Fully justify text.  Also see <https://practicaltypography.com/hyphenation.html>. */
